--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -19,9 +19,9 @@
         <a class="nav-link" href="#"></a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!-- <form class="form-inline my-2 my-lg-0">
       <button class="btn btn-primary my-2 my-sm-0" type="submit">Sign In</button>
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Sign Up</button>
-    </form>
+    </form> -->
   </div>
 </nav>
