--- a/Operarius/src/app/login/login.component.html
+++ b/Operarius/src/app/login/login.component.html
@@ -1,5 +1,4 @@
 <form (submit)="loginUser($event)">
   <input type="text" placeholder="Username">
-  <input type="text" placeholder="Password">
-         
+  <input type="password" placeholder="Password">     
 </form>
