--- a/Operarius/src/app/footer/footer.component.html
+++ b/Operarius/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">Operarius, authors: Konik, Jasiński, Piekarz, Gordynskii</span>
+    <small>&copy; {{year}} <span class="text-muted">Operarius, authors: Konik, Jasiński, Piekarz, Gordyński</span></small>
   </div>
 </footer>
