--- a/Operarius/src/app/app.component.html
+++ b/Operarius/src/app/app.component.html
@@ -1,4 +1,11 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
-<app-offers></app-offers>
-<app-footer></app-footer>
+<!-- 
+    <app-offers></app-offers> 
+-->
+<router-outlet></router-outlet>
+
+<app-footer class="container"></app-footer>
+
+
+
