--- a/Operarius/src/app/home/home.component.html
+++ b/Operarius/src/app/home/home.component.html
@@ -5,10 +5,10 @@
 </div>
 <div class="container">   
         
-        <a  class="btn btn-success" routerLink="Signin">Sign in</a>
-        <a  class="btn btn-info" routerLink="login">Log in</a>
+        <a  class="btn btn-success" routerLink="../Signin">Sign in</a>
+        <a  class="btn btn-info" routerLink="../login">Log in</a>
         <br><br>
-        <a class="btn btn-danger" routerLink="admin">Go to admin</a>
+        <a class="btn btn-danger" routerLink="../admin">Go to admin</a>
         
     <!--
         <button class="btn btn-success">Sign in</button>         
