--- a/Operarius/src/app/home/home.component.html
+++ b/Operarius/src/app/home/home.component.html
@@ -1,23 +1,22 @@
-<div class="container" id="welcome">
-    <br><br><br>
+<div class="home-wrapper">
+  <div class="container" id="welcome">
+    <br /><br /><br />
     <h2>Witamy w aplikacji operarius!</h2>
-    <br><br><br>
-</div>
-<div class="container">   
-        
-        <a  class="btn btn-success" routerLink="../Signin">Sign in</a>
-        <a  class="btn btn-info" routerLink="../login">Log in</a>
-        <br><br>
-        <a class="btn btn-danger" routerLink="../admin">Go to admin</a>
-        
-    <!--
-        <button class="btn btn-success">Sign in</button>         
-        <button class="btn btn-info">Log in</button>                
-        <br><br>        
-        <button class="btn btn-danger">Go to admin</button>
+    <br /><br /><br />
+  </div>
+  <div class="container">
+    <a class="btn btn-success" routerLink="../Signin">Sign in</a>
+    <a class="btn btn-info" routerLink="../login">Log in</a>
+    <br /><br />
+    <a class="btn btn-danger" routerLink="../admin">Go to admin</a>
 
-        
-    -->
-</div>
+    <!--
+            <button class="btn btn-success">Sign in</button>         
+            <button class="btn btn-info">Log in</button>                
+            <br><br>        
+            <button class="btn btn-danger">Go to admin</button>
     
-  
+            
+        -->
+  </div>
+</div>
