--- a/Operarius/src/styles.css
+++ b/Operarius/src/styles.css
@@ -11,6 +11,6 @@
 app-footer {
     position: absolute;
     bottom: 0;
-    width: 120%;
-    height: 10vh; /*высота футера будет зависеть от высоты экрана*/
+    width: 100%;
+    height: 10vh;
 }
