--- a/Operarius/src/styles.css
+++ b/Operarius/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
  @import "~bootstrap/dist/css/bootstrap.css";
+
  body{
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(src\resources\img\cover.jpg);
     background-size: cover;
@@ -11,6 +12,6 @@
 app-footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 10vh;
+    width: 120%;
+    height: 10vh; /*высота футера будет зависеть от высоты экрана*/
 }
