add button 'Show Offerts' to navbar, and make it work, uses services

--- a/Operarius/src/app/offers/offers.component.html
+++ b/Operarius/src/app/offers/offers.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!collapsed">
 <h2>Offers</h2>
 <table datatable class="row-border hover">
 <thead>
@@ -17,6 +18,7 @@
     </tr>
   </tbody>
 </table>
+</div>
 
 <!-- <app-offer-detail [Offer]="selectedOffer"></app-offer-detail> -->
 <!-- <igx-input-group type="search" class="search">
