--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -6,8 +6,8 @@
 
   <div class="collapng se navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Offers</a>
+      <li class="nav-link">
+        <button class="offers-btn" (click)="changeCollapse()">Show Offers</button>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">How it works</a>
@@ -29,6 +29,6 @@
     <!-- <form class="form-inline my-2 my-lg-0">
       <button class="btn btn-primary my-2 my-sm-0" type="submit">Sign In</button>
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Sign Up</button>
-    </form> -->
+    </form>  -->
   </div>
 </nav>
