add faq, how it works and show offers

--- a/Operarius/src/app/faq/faq.component.html
+++ b/Operarius/src/app/faq/faq.component.html
@@ -1,3 +1,20 @@
-<p>
-  faq works!
-</p>
+<h1>FAQ</h1>
+<br>
+<h2>Is it free?</h2>
+<p>Yes, this site is totally free</p>
+<h2>Can I only add car parts announcement</h2>
+<p>Yes, this is the purpose of this site</p>
+<h2>What if I try add something else?</h2>
+<p>Administrator won't let you do that. All offers have to be accepted, before they show on the site</p>
+<h2>How many announcement can I add?</h2>
+<p>Ther is no limitation</p>
+<h2></h2>
+<p></p>
+<h2></h2>
+<p></p>
+
+<!--
+<h2>Question</h2>
+<p>answer</p>
+
+-->
