--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -6,12 +6,12 @@
 
   <div class="collapng se navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-link">
-        <button class="offers-btn" (click)="changeCollapse()">Show Offers</button>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="offers">Show offers</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">How it works</a>
-      </li>
+          <a class="nav-link" routerLink="how-it-works">How It Works</a>
+        </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="faq">FAQ</a>
       </li>
