--- a/Operarius/src/app/app.component.html
+++ b/Operarius/src/app/app.component.html
@@ -1,6 +1,12 @@
 <app-navbar></app-navbar>
+
 <app-header></app-header>
-<!-- 
+<div class="container">
+        <app-offers>
+            
+        </app-offers>
+    </div> -->
+
     <app-offers></app-offers> 
 -->
 <router-outlet></router-outlet>
