--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -24,8 +24,8 @@
         <a ngbDropdownToggle class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">second</a>
+          <a class="dropdown-item" routerLink="new-offer" href="#">Add offer</a>
         </div>
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0">
