--- a/Operarius/src/styles.css
+++ b/Operarius/src/styles.css
@@ -14,3 +14,14 @@ app-footer {
     width: 100%;
     height: 10vh;
 }
+
+input.ng-touched.ng-invalid{
+    border-color: #dc3545;
+}
+
+div.validation-error{
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
