create profile settings component

--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -23,8 +23,7 @@
       <li ngbDropdown class="nav-item dropdown">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">second</a>
+          <a class="dropdown-item" href="profile">Profile settings</a>
           <a class="dropdown-item" routerLink="new-offer" href="#">Add offer</a>
         </div>
     </ul>
