--- a/Operarius/src/app/offers/offers.component.css
+++ b/Operarius/src/app/offers/offers.component.css
@@ -8,6 +8,7 @@
     list-style-type: none;
     padding: 0;
     width: 15em;
+    
   }
   .offers li {
     cursor: pointer;
@@ -18,6 +19,7 @@
     padding: .3em 0;
     height: 1.6em;
     border-radius: 4px;
+    
   }
   .offers li.selected:hover {
     background-color: #BBD8DC !important;
@@ -49,7 +51,15 @@
 
   body{
     padding: 2rem 0rem;
+    
   }
   .image-parent {
     max-width: 40px;
-  } 
+  }
+
+  h2{
+    color: white;
+  }
+.white{
+  color:white;
+}
