--- a/Operarius/src/app/offers/offers.component.html
+++ b/Operarius/src/app/offers/offers.component.html
@@ -1,7 +1,7 @@
 <h2>Offers</h2>
 <table datatable class="row-border hover">
 <thead>
-  <tr>
+  <tr class='white'>
     <th>ID</th>
     <th>Title</th>
     <th>Content</th>
