--- a/Operarius/src/app/home/home.component.html
+++ b/Operarius/src/app/home/home.component.html
@@ -5,8 +5,8 @@
     <br /><br /><br />
   </div>
   <div class="container">
-    <a class="btn btn-success" routerLink="../Signup">Sign up</a>
-    <a class="btn btn-info" routerLink="../login">Log in</a>
+    <a class="btn btn-success" routerLink="/register-user">Sign up</a>
+    <a class="btn btn-info" routerLink="../sign-yin">Log in</a>
     <br /><br />
     <a class="btn btn-danger" routerLink="../admin">Go to admin</a>
   </div>
