--- a/Operarius/src/app/profile/profile.component.html
+++ b/Operarius/src/app/profile/profile.component.html
@@ -12,13 +12,22 @@
       </div>
     </div>
     
-    <!-- edit form column -->
-    <div class="col-md-9 personal-info">
-      <div class="alert alert-info alert-dismissable">
-        <a class="panel-close close" data-dismiss="alert">×</a> 
-        <i class="fa fa-coffee"></i>
-        This is an <strong>.alert</strong>. Use this to show important messages to the user.
+    <div class="row" *ngIf="authService.userData as user">
+      <div class="col-md-12">
+      <div class="media">
+      <img class="align-self-start mr-5 img-thumbnail rounded-circle" src="{{(user.photoURL) ? user.photoURL : '/assets/dummy-user.png'}}"
+      alt="{{user.displayName}}">
+      <div class="media-body">
+      <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
+      <p>User ID: <strong>{{user.uid}}</strong></p>
+      <p>Email: <strong>{{user.email}}</strong></p>
+      <p>Email Verified: <strong>{{user.emailVerified}}</strong></p>
       </div>
+      </div>
+      </div>
+      </div>
+    <div class="col-md-9 personal-info">
+    
       <h3>Personal info</h3>
       
       <form class="form-horizontal" role="form">
