--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -25,6 +25,9 @@
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="profile">Profile settings</a>
           <a class="dropdown-item" routerLink="new-offer" href="#">Add offer</a>
+          <a class="nav-link" (click)="authService.SignOut()">
+            <i class="fas fa-sign-out-alt"></i>Log out
+            </a>
         </div>
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0">
