--- a/Operarius/src/app/forrgot-password/forrgot-password.component.html
+++ b/Operarius/src/app/forrgot-password/forrgot-password.component.html
@@ -1,18 +1,18 @@
 <div class="displayTable">
   <div class="displayTableCell">
   <div class="authBlock">
-  <h3>Reset Password</h3>
-  <p class="text-center">Please enter your email address to request a password reset.</p>
+  <h3 ><font color="white">Reset Password</font></h3>
+  <p class="text-left"><font color="white">Please enter your email address to request a password reset.</font></p>
   <div class="formGroup">
   <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
   </div>
   <!-- Calling ForgotPassword from AuthService Api -->
   <div class="formGroup">
-  <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
+  <input type="submit" class="btn btn-primary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
   </div>
   </div>
   <div class="redirectToLogin">
-  <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
+  <span><font color="white">Go back to ? </font><span class="redirect" routerLink="/sign-in"><font color="white">Log In </font></span></span>
   </div>
   </div>
   </div>
