--- a/Operarius/src/app/home/home.component.html
+++ b/Operarius/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="container">
     <a class="btn btn-success" routerLink="/register-user">Sign up</a>
-    <a class="btn btn-info" routerLink="../sign-yin">Log in</a>
+    <a class="btn btn-info" routerLink="../sign-in">Log in</a>
     <br /><br />
     <a class="btn btn-danger" routerLink="../admin">Go to admin</a>
   </div>
