chat without formatting

--- a/Operarius/src/app/offers/offers.component.html
+++ b/Operarius/src/app/offers/offers.component.html
@@ -10,12 +10,12 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let Offer of list">
-    <td>{{Offer.id}}</td>
+  <tr  *ngFor="let Offer of list">
+    <td  >{{Offer.id}}</td>
     <td>{{Offer.title}}</td>
     <td>{{Offer.content}}</td>
     <td>{{Offer.location}}</td>
-    <td><a class="btn text-danger">Chat<i class="fa fa-trash"></i></a></td>
+    <td ><a class="btn text-danger"  >Chat</a></td>
     </tr>
   </tbody>
 </table>
