--- a/Operarius/src/app/navbar/navbar.component.html
+++ b/Operarius/src/app/navbar/navbar.component.html
@@ -24,10 +24,12 @@
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="profile">Profile settings</a>
-          <a class="dropdown-item" routerLink="new-offer" href="#">Add offer</a>
-          <a class="nav-link" (click)="authService.SignOut()">
-            <i class="fas fa-sign-out-alt"></i>Log out
+          <a class="dropdown-item" routerLink="new-offer">Add offer</a>
+          <a  class="dropdown-item"  (click)="authService.SignOut()">
+            Log out
             </a>
+            <a class="dropdown-item" routerLink="user-profile">User details</a>
+
         </div>
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0">
