--- a/Operarius/src/app/offers/offer/offer.component.html
+++ b/Operarius/src/app/offers/offer/offer.component.html
@@ -1,4 +1,4 @@
-<h1 class="display-4">EMP. Register</h1>
+<h1 class="display-4">Add Offer</h1>
 <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
    <div class="form-group">
      <input name ="title" #title="ngModel" [(ngModel)]="service.formData.title" type="text" class="form-control" placeholder="title" required>
