--- a/Operarius/src/app/signup/signup.component.html
+++ b/Operarius/src/app/signup/signup.component.html
@@ -1,7 +1,10 @@
-<div class="displayTable">
+/*<div class="displayTable">
   <div class="displayTableCell">
   <div class="authBlock">
   <h3>Sign Up</h3>
+  <div class="formGroup">
+      <input type="text" class="formControl" placeholder="displayName" #displayName required>
+      </div>
   <div class="formGroup">
   <input type="email" class="formControl" placeholder="Email Address" #userEmail required>
   </div>
@@ -34,7 +37,6 @@
   </div>
   </div>
   </div>
-
 
 
   <!--
