--- a/Operarius/src/app/faq/faq.component.css
+++ b/Operarius/src/app/faq/faq.component.css
@@ -7,3 +7,16 @@ h1 {
 h2{
     color: silver
 }
+h3{
+    font-size: 18px;
+    color: silver
+}
+p{
+    font-size: 14px
+}
+
+/*pp-footer{
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}*/
